<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Absen">

    <ImageView
        android:id="@+id/imageView_Absen_Atas"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imageView_Absen_Bg"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background2" />

    <ImageView
        android:id="@+id/imageView_Absen_Bawah"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imageView_Absen_Bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/background2" />

    <TextView
        android:id="@+id/textView_Absen_Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:text="@string/textView_Absen_Judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Absen_Jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/textView_Absen_Jam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Absen_Atas" />

    <EditText
        android:id="@+id/editText_Absen_Jam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/textView_Absen_Jam"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textView_Absen_Jam"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textView_Absen_Jam"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Absen_Atas" />

    <ImageView
        android:id="@+id/imageView_Absen_Jam"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageView_Absen_Jam"
        app:layout_constraintStart_toEndOf="@+id/editText_Absen_Jam"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Absen_Atas"
        app:srcCompat="@drawable/jam" />

    <TextView
        android:id="@+id/textView_Absen_Tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textView_Absen_Tanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Absen_Jam" />

    <EditText
        android:id="@+id/editText_Absen_Tanggal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/textView_Absen_Tanggal"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textView_Absen_Tanggal"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView_Absen_Tanggal"
        app:layout_constraintTop_toBottomOf="@+id/textView_Absen_Jam" />

    <ImageView
        android:id="@+id/imageView_Absen_Kalender"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageView_Absen_Kalender"
        app:layout_constraintStart_toEndOf="@+id/editText_Absen_Tanggal"
        app:layout_constraintTop_toBottomOf="@+id/textView_Absen_Jam"
        app:srcCompat="@drawable/kalender" />

    <Button
        android:id="@+id/button_Absen_Submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Absen_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Absen_Tanggal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="158dp"
        android:src="@drawable/darman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Absen_Submit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:text="Nama : Darman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:text="NIM : 3420170004"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>